--- a/avisoPrivacidad.html
+++ b/avisoPrivacidad.html
@@ -35,9 +35,9 @@
     <h2>Datos personales que recabamos y su finalidad</h2>
     <ul>
         <li>Datos de identificación: nombre completo.</li>
-        <li>Datos de contacto: números telefónicos, correo electrónico.</li>
+        <li>Datos de contacto: correo electrónico.</li>
         <li>Datos sobre actividades físicas: registros de ejercicios, progreso en entrenamientos.</li>
-        <li>Datos sobre características físicas: edad, peso, estatura.</li>
+        <li>Datos sobre características físicas: peso, estatura.</li>
     </ul>
 
     <h2>Finalidades del tratamiento</h2>
@@ -69,14 +69,14 @@
     </p>
     <ul>
         <li>Correo electrónico: <a href="mailto:hs.entrenat@gmail.com">hs.entrenat@gmail.com</a></li>
-        <li>Teléfono: [Número de Teléfono]</li>
+        <li>Teléfono: 9612093094 </li>
     </ul>
 
     <h2>Identificación de Información Sensible</h2>
     <p>La información sensible manejada en EntrenAT ha sido clasificada como:</p>
     <ul>
         <li>Alta prioridad: contraseñas.</li>
-        <li>Media prioridad: número telefónico, correo electrónico.</li>
+        <li>Media prioridad: correo electrónico.</li>
         <li>Baja prioridad: registros de ejercicios, progreso en entrenamientos, edad, peso, estatura.</li>
     </ul>
 
@@ -85,7 +85,7 @@
         El presente aviso de privacidad puede sufrir modificaciones, cambios o actualizaciones derivadas de nuevos
         requerimientos legales o por otras causas.
         Nos comprometemos a mantenerlo informado sobre los cambios que pueda sufrir el presente aviso de privacidad a
-        través de [<a href="[URL de la página web]">URL de la página web</a>].
+        través de [<a href="https://hs-solutions.vercel.app/">HS Solutions</a>].
     </p>
 </body>
 
